[package]
edition = "2021"
name = "fast-geoip-wasm"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-fs = "1.5.0"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.6.0", default-features = false, features = ["napi4", "async"] }
napi-derive = "2.6.0"
serde = {version = "1.0.140", features = ["derive"]}
serde_json = "1.0.82"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
